TestSuite/Scheduler/Correct/Milestone-1.tjp
project prj "Milestone Test" "$Id" 2003-01-01-0:00-GMT 2003-02-01-0:00-GMT {
	timezone "GMT"
}

task t1 "Task1" {
	start 2003-01-01-0:00-GMT
	milestone
}

task t2 "Task2" {
	end 2003-01-01-0:00:01-GMT
	scheduling alap
	milestone
}

task t3 "Task3" {
	start 2003-01-31-23:59:59-GMT
	milestone
}

task t4 "Task4" {
	end 2003-01-31-23:59:59-GMT
	scheduling alap
	milestone
}

